fix: align home header

--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -16,3 +16,11 @@
   left: 0
   width: 1024px
   height: auto
+
+.app-header-container
+  max-width: 1920px
+  margin: 64px auto
+
+@media (max-width: 1920px)
+  .app-header-container
+    padding: 0 64px
